--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "egg": "^2.6.1",
     "egg-cors": "^2.2.2",
     "egg-mongoose": "^3.2.0",
-    "egg-scripts": "^2.6.0"
+    "egg-scripts": "^2.6.0",
+    "egg-validate": "^2.0.2"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
