--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.3.1",
-    "@nestjs/mongoose": "^6.4.0",
+    "@nestjs/mongoose": "^7.0.1",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.12.0",
     "class-transformer": "^0.2.3",
@@ -43,6 +43,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
+    "@types/mongoose": "^5.7.21",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
